gccida/c0/gen_reg_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/emit-rtl.c:1115:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_reg_rtx( machine_mode mode) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/emit-rtl.c:1117:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v1; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/emit-rtl.c:1125:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode partmode; // [rsp+28h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/emit-rtl.c:1134:31: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( generating_concat_p && ( mode_class_0[mode] == MODE_COMPLEX_FLOAT || mode_class_0[mode] == MODE_COMPLEX_INT) ) 
                              ^~~~~~~~~~~~
                              mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/emit-rtl.c:1134:75: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( generating_concat_p && ( mode_class_0[mode] == MODE_COMPLEX_FLOAT || mode_class_0[mode] == MODE_COMPLEX_INT) ) 
                                                                          ^~~~~~~~~~~~
                                                                          mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/emit-rtl.c:1137:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_reg_rtx/src/obj/emit-rtl.o] Error 1
